<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://apache.org" xmlns:xsi="http://w3.org" xsi:schemaLocation="http://apache.org http://apache.org">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.apache.click.showcase</groupId>
    <artifactId>fisio-system-sql2o</artifactId>
    <version>2.6.1-SNAPSHOT</version>
    <packaging>war</packaging>
    <name>Showcase Case Study - Fisio Management System (Sql2o)</name>
    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <click.version>2.6.0</click.version>
        <servlet-api.version>[4.0.1,)</servlet-api.version>
        <jetty.version>9.4.56.v20240826</jetty.version>
        <junit.version>[4.,)</junit.version>
        <db.url>jdbc:h2:file:./src/main/config/data/fisio;MODE=PostgreSQL;DB_CLOSE_DELAY=-1;INIT=CREATE SCHEMA IF NOT EXISTS FISIO;DATABASE_TO_LOWER=TRUE;</db.url>
        <h2.version>2.1.214</h2.version>        
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.apache.click</groupId>
            <artifactId>click</artifactId>
            <version>${click.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.click</groupId>
            <artifactId>extras</artifactId>
            <version>${click.version}</version>
        </dependency>
        <dependency>
            <groupId>org.webjars</groupId>
            <artifactId>bootstrap</artifactId>
            <version>5.3.2</version>
        </dependency>
        <dependency>
            <groupId>org.webjars</groupId>
            <artifactId>webjars-locator-core</artifactId>
            <version>0.52</version>
        </dependency>        
        <dependency>
            <groupId>org.apache.click</groupId>
            <artifactId>click</artifactId>
            <version>${click.version}</version>
            <classifier>mock</classifier>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
            <version>${servlet-api.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.sql2o</groupId>
            <artifactId>sql2o</artifactId>
            <version>1.6.0</version>
        </dependency>
        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <version>5.1.0</version>
        </dependency>
        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-core</artifactId>
            <version>10.10.0</version>
        </dependency>
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <version>${h2.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>jcl-over-slf4j</artifactId>
            <version>1.7.36</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.36</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>1.7.36</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.flywaydb</groupId>
                <artifactId>flyway-maven-plugin</artifactId>
                <version>8.5.4</version>
                <configuration>
                    <url>${db.url}</url>
                    <schemas>
                        <schema>fisio</schema>
                    </schemas>
                    <user>sa</user>
                    <password>sa</password>
                    <!--you already have versions 1.0 and 3.0 applied, and now a version 2.0 is found, it will be applied too instead of being ignored-->
                    <outOfOrder>true</outOfOrder>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>com.h2database</groupId>
                        <artifactId>h2</artifactId>
                        <version>${h2.version}</version>
                    </dependency>
                </dependencies>
            </plugin>               
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
                <configuration>
                    <argLine>--add-opens java.base/java.math=ALL-UNNAMED</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>3.4.0</version>
            </plugin>
            <!-- Enables rapid local prototyping execution via Jetty command lines -->
            <plugin>
                <groupId>org.eclipse.jetty</groupId>
                <artifactId>jetty-maven-plugin</artifactId>
                <version>10.0.15</version>
            </plugin>
        </plugins>
    </build>
</project>
